Updating default settings.

--- a/config/settings_data.json
+++ b/config/settings_data.json
@@ -24,29 +24,6 @@
       "social_facebook_link": "https://www.facebook.com/shopify",
       "social_twitter_link": "https://twitter.com/shopify"
     },
-    "Flat": {
-      "ajax_cart_enable": true,
-      "ajax_cart_method": "Drawer",
-      "cart_notes_enable": true,
-      "color_body_bg": "#ecf0f1",
-      "color_body_text": "#333333",
-      "color_borders": "#e5e5e5",
-      "color_footer_bg": "#2c3e50",
-      "color_footer_social_link": "#eeeeee",
-      "color_footer_text": "#eeeeee",
-      "color_primary": "#e74c3c",
-      "color_secondary": "#3498db",
-      "customer_layout": "theme",
-      "favicon_enable": false,
-      "footer_newsletter_enable": true,
-      "footer_quicklinks_enable": true,
-      "footer_quicklinks_linklist": "footer",
-      "footer_social_enable": true,
-      "logo_max_width": "450",
-      "logo_use_image": false,
-      "social_facebook_link": "https://www.facebook.com/shopify",
-      "social_twitter_link": "https://twitter.com/shopify"
-    },
     "Contrast": {
       "color_primary": "#1b8c8c",
       "color_secondary": "#d8204f",
@@ -71,9 +48,9 @@
       "ajax_cart_enable": true,
       "ajax_cart_method": "drawer",
       "twittercard_handle": "@",
-      "typekit_url": "use.typekit.net/wqe2gmh.js",
-      "typekit_header_font": "adelle-sans",
-      "typekit_body_font": "adelle-sans",
+      "typekit_url": "",
+      "typekit_header_font": "",
+      "typekit_body_font": "",
       "checkout_use_header_image": false,
       "checkout_banner_background_color": "#ffffff",
       "checkout_logo": "",
