--- a/config/settings_data.json
+++ b/config/settings_data.json
@@ -8,7 +8,7 @@
       "color_body_bg": "#fff",
       "color_body_text": "#333333",
       "color_borders": "#e5e5e5",
-      "color_footer_bg": "#f2f2f2",
+      "color_nav_bg": "#f2f2f2",
       "color_footer_social_link": "#bbbbbb",
       "color_footer_text": "#636363",
       "color_primary": "#747474",
@@ -30,7 +30,44 @@
       "color_body_bg": "#ffffff",
       "color_borders": "#e5e5e5",
       "color_body_text": "#333333",
-      "color_footer_bg": "#17131a",
+      "color_nav_bg": "#17131a",
+      "color_footer_text": "#eeeeee",
+      "color_footer_social_link": "#eeeeee",
+      "logo_use_image": false,
+      "logo_max_width": "450",
+      "favicon_enable": false,
+      "footer_quicklinks_enable": true,
+      "footer_quicklinks_linklist": "footer",
+      "footer_social_enable": false,
+      "social_twitter_link": "https://twitter.com/shopify",
+      "social_facebook_link": "https://www.facebook.com/shopify",
+      "footer_newsletter_enable": true,
+      "newsletter_form_action": "",
+      "cart_notes_enable": true,
+      "cart_vendor_enable": false,
+      "ajax_cart_enable": true,
+      "ajax_cart_method": "drawer",
+      "twittercard_handle": "@",
+      "typekit_url": "",
+      "typekit_header_font": "",
+      "typekit_body_font": "",
+      "checkout_use_header_image": false,
+      "checkout_banner_background_color": "#ffffff",
+      "checkout_logo": "",
+      "checkout_headline": "",
+      "checkout_accent_color": "#2a9dcc",
+      "checkout_button_color": "#2a9dcc",
+      "checkout_call_to_action_color": "#8fc243",
+      "customer_layout": "theme",
+      "typekit_font": ""
+    },
+    "Bright": {
+      "color_primary": "#d97925",
+      "color_secondary": "#013440",
+      "color_body_bg": "#ffffff",
+      "color_borders": "#e5e5e5",
+      "color_body_text": "#333333",
+      "color_nav_bg": "#ab1a25",
       "color_footer_text": "#eeeeee",
       "color_footer_social_link": "#eeeeee",
       "logo_use_image": false,
